update my portfolio
update background animation /
add text-highlighting span tag in mind-set section /
add progress bar in mind-set section /
change 개인 프로젝트 link in README

--- a/my_project/my_portfolio/html/index.html
+++ b/my_project/my_portfolio/html/index.html
@@ -110,6 +110,16 @@
           <li></li>
           <li></li>
           <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
         </ul>
         <div class="air air1"></div>
         <div class="air air2"></div>
@@ -182,8 +192,11 @@
         <div class="inner">
           <h2>skill</h2>
           <div class="text-box">
-            <div class="item-box rev" data-aos="fade-left">
-              <p>웹 기본 언어 html, css, js</p>
+            <div class="item-box" data-aos="fade-left">
+              <div>
+                <p>웹 기본 언어</p>
+                <p>html, css, js</p>
+              </div>
               <div class="img-box">
                 <img src="../img/html.png" alt="icon" />
                 <img src="../img/css.png" alt="icon" />
@@ -192,7 +205,11 @@
             </div>
 
             <div class="item-box rev" data-aos="fade-left">
-              <p>외부 라이브러리, 프레임워크</p>
+              <div>
+                <p>외부 라이브러리, 프레임워크</p>
+                <p>Swiper slide, fullpage.js, Bootstrap ...</p>
+              </div>
+
               <div class="img-box">
                 <img src="../img/temp-swiper.png" alt="icon" />
                 <img src="../img/temp-fullpage.png" alt="icon" />
@@ -201,8 +218,16 @@
             </div>
 
             <div class="item-box" data-aos="fade-left">
-              <p>그 외</p>
-              <button type="button" class="btn btn-primary">
+              <div>
+                <p>그 외의 경험</p>
+                <p>자료구조, 알고리즘, SOLID programming 등 ...</p>
+              </div>
+
+              <button
+                type="button"
+                class="btn btn-primary"
+                onclick="location.href='../../kkh/html/index.html'"
+              >
                 coding portfolio
               </button>
             </div>
@@ -479,50 +504,55 @@
             <div class="text-box t1 active">
               <h2>Logic</h2>
               <p>
-                코드를 구성할 때 항상 효율적으로 구성하려는 습관을 가지고
-                있습니다.
+                코드를 구성할 때 항상 <span>효율적</span>으로 구성하려는 습관을
+                가지고 있습니다.
               </p>
               <p>
-                최대한 간단하게, 필요한 로직만 사용하고, 다른 사람이 보기에
-                단순하고 깔끔하게 구성하려고 노력합니다.
+                최대한 <span>간단</span>하게, 필요한 로직만 사용하고, 다른
+                사람이 보기에 <span>단순</span>하고 <span>깔끔</span>하게
+                구성하려고 노력합니다.
               </p>
               <p>
-                동일한 기능을 수행하는 컴포넌트가 여러개 있다면 코드를 두 번
-                작성하는 대신 함수를 작성하여 컴포넌트에 사용합니다.
+                <span>동일한 기능</span>을 수행하는 컴포넌트가 여러개 있다면
+                코드를 두 번 작성하는 대신 <span>함수</span>를 작성하여
+                컴포넌트에 사용합니다.
               </p>
             </div>
             <div class="text-box t2">
               <h2>Modularize</h2>
               <p>
-                코드를 구성할 때 모듈화를 하지 않으면 다른 컴포넌트로간의 의도치
-                않은 동작을 할 수 있고, 정리되지 않은 코드로 인한 가독성 저하,
-                그에 따른 코드 수정이 어렵다고 생각합니다.
+                코드를 구성할 때 <span>모듈화</span>를 하지 않으면 다른
+                컴포넌트로간의 의도치 않은 동작을 할 수 있고, 정리되지 않은
+                코드로 인한 가독성 저하, 그에 따른 코드 수정이 어렵다고
+                생각합니다.
               </p>
               <p>
-                특정 작업만을 수행하는 코드를 개별로 구성하면 해당 작업의 오류
-                코드를 쉽게 찾아 수정하기 편하고, 다론 요소 간의 간섭을 덜
-                걱정할 수 있습니다.
+                특정 작업만을 수행하는 코드를 <span>개별로 구성</span>하면 해당
+                작업의 오류 코드를 쉽게 찾아 <span>수정</span>하기 편하고, 다른
+                요소 간의 <span>간섭</span>을 덜 걱정할 수 있습니다.
               </p>
               <p>
-                건설로 비유하자면 모듈화는 건설 이전의 설계된 도면이라고
-                생각합니다. 전반적인 설계 없이 건물을 구성하면 금방 무너져 내릴
-                것입니다.
+                건설로 비유하자면 모듈화는 건설 이전의 설계된
+                <span>도면</span>이라고 생각합니다. 전반적인 설계 없이 건물을
+                구성하면 금방 무너져 내릴 것입니다.
               </p>
             </div>
             <div class="text-box t3">
               <h2>Open Mind</h2>
               <p>
-                코드를 혼자 작성하면 해당 언어가 금방 익숙해진다는 장점이
-                있습니다. 하지만 주변 도움 없이 혼자 코드를 작성하면 손쉽게
-                해결할 수 있는 문제점에 부딪혀 혼자 고민하게 됩니다.
+                코드를 <span>혼자</span> 작성하면 해당 언어가 금방 익숙해진다는
+                장점이 있습니다. 하지만 주변 도움 없이 혼자 코드를 작성하면
+                손쉽게 해결할 수 있는 <span>문제점</span>에 부딪혀 혼자 고민하게
+                됩니다.
               </p>
               <p>
                 또한 외부에서 코드를 참고할 때 다양하게 찾아보지 않는다면 좋은
                 코드를 찾지 못할 수 있습니다.
               </p>
               <p>
-                복잡한 기능이 구현된 유용한 외부 라이브러리들을 활용하면 기능을
-                직접 구현하는 시간을 줄일 수 있습니다. 필요한 기능이 있다면 해당
+                복잡한 <span>기능</span>이 구현된 유용한
+                <span>외부 라이브러리</span>들을 활용하면 기능을 직접 구현하는
+                <span>시간</span>을 줄일 수 있습니다. 필요한 기능이 있다면 해당
                 기능만 참고하여 사용할 수 있습니다.
               </p>
             </div>
@@ -534,6 +564,9 @@
 
             <div class="active-btn"></div>
           </div>
+        </div>
+        <div class="slide-bar">
+          <div class="progress"></div>
         </div>
       </section>
       <script src="../js/mindButton.js"></script>
