add effect in title

--- a/my_project/my_portfolio/html/index.html
+++ b/my_project/my_portfolio/html/index.html
@@ -142,9 +142,11 @@
             </ul>
           </div>
           <div class="text-box">
-            <h2><span>L</span>og<span>i</span>c.</h2>
-            <h2>Modu<span>l</span>ar<span>i</span>ze.</h2>
-            <h2>Open M<span>i</span>nd.</h2>
+            <h2 class="head-left head1"><span>L</span>og<span>i</span>c.</h2>
+            <h2 class="head-right head2">
+              Modu<span>l</span>ar<span>i</span>ze.
+            </h2>
+            <h2 class="head-left head3">Open M<span>i</span>nd.</h2>
           </div>
         </section>
 
@@ -175,7 +177,7 @@
             </div>
             <div class="inner-box right-bottom flex-row">
               <div class="text-box">
-                <p>혼자 있는 것을 좋아하는 극 I 성향 입니다</p>
+                <p>혼자 있는 것을 좋아하는 극 내향적인 성향입니다</p>
                 <p>
                   피아노를 고등학생까지 연주했고, 밴드에서 키보드를 현재까지
                   연주하고 있습니다
@@ -189,7 +191,7 @@
 
       <!-- skill -->
       <section id="scrollspyHeading3" class="skill">
-        <div class="inner">
+        <div class="skill-inner">
           <h2>skill</h2>
           <div class="text-box">
             <div class="item-box" data-aos="fade-left">
