update my portfolio
add & change font /
change colors /
change link button in portfolio section /
update skill section

--- a/my_project/my_portfolio/html/index.html
+++ b/my_project/my_portfolio/html/index.html
@@ -193,9 +193,9 @@
       <section id="scrollspyHeading3" class="skill">
         <div class="skill-inner">
           <h2>skill</h2>
-          <div class="text-box">
-            <div class="item-box" data-aos="fade-left">
-              <div>
+          <div class="big-item-box">
+            <div class="item-box item1">
+              <div class="text-box">
                 <p>웹 기본 언어</p>
                 <p>html, css, js</p>
               </div>
@@ -206,8 +206,8 @@
               </div>
             </div>
 
-            <div class="item-box rev" data-aos="fade-left">
-              <div>
+            <div class="item-box item2">
+              <div class="text-box">
                 <p>외부 라이브러리, 프레임워크</p>
                 <p>Swiper slide, fullpage.js, Bootstrap ...</p>
               </div>
@@ -219,8 +219,8 @@
               </div>
             </div>
 
-            <div class="item-box" data-aos="fade-left">
-              <div>
+            <div class="item-box item3">
+              <div class="text-box">
                 <p>그 외의 경험</p>
                 <p>자료구조, 알고리즘, SOLID programming 등 ...</p>
               </div>
@@ -504,7 +504,7 @@
           <h2>Mind set</h2>
           <div class="content">
             <div class="text-box t1 active">
-              <h2>Logic</h2>
+              <h3>Logic</h3>
               <p>
                 코드를 구성할 때 항상 <span>효율적</span>으로 구성하려는 습관을
                 가지고 있습니다.
@@ -521,7 +521,7 @@
               </p>
             </div>
             <div class="text-box t2">
-              <h2>Modularize</h2>
+              <h3>Modularize</h3>
               <p>
                 코드를 구성할 때 <span>모듈화</span>를 하지 않으면 다른
                 컴포넌트로간의 의도치 않은 동작을 할 수 있고, 정리되지 않은
@@ -540,7 +540,7 @@
               </p>
             </div>
             <div class="text-box t3">
-              <h2>Open Mind</h2>
+              <h3>Open Mind</h3>
               <p>
                 코드를 <span>혼자</span> 작성하면 해당 언어가 금방 익숙해진다는
                 장점이 있습니다. 하지만 주변 도움 없이 혼자 코드를 작성하면
@@ -588,13 +588,13 @@
               <p>Swiper slide, AOS 외부 라이브러리</p>
               <p>Side navigation</p>
               <p>반응형 웹 디자인</p>
-              <button
-                type="button"
-                class="btn btn-primary"
+              <div
+                class="link-box"
                 onclick="location.href='../../anywhere/html/index.html'"
               >
-                Link
-              </button>
+                <p>Link</p>
+                <div class="hover-bar"></div>
+              </div>
             </div>
           </div>
         </div>
@@ -616,13 +616,13 @@
               <p>상단 메뉴와 서브메뉴, mouse hover 디자인</p>
               <p>background 에 opacity 를 gradient 로 적용</p>
               <p>반응형 웹 디자인</p>
-              <button
-                type="button"
-                class="btn btn-primary"
+              <div
+                class="link-box"
                 onclick="location.href='../../Dr_K/html/index.html'"
               >
-                Link
-              </button>
+                <p>Link</p>
+                <div class="hover-bar"></div>
+              </div>
             </div>
           </div>
         </div>
@@ -643,13 +643,14 @@
               <p>Fullpage.js 외부 라이브러리</p>
               <p>active class 내부 태그에 애니메이션 적용</p>
               <p>page 내에 slide / top 버튼</p>
-              <button
-                type="button"
-                class="btn btn-primary"
+              <p>반응형 웹 디자인</p>
+              <div
+                class="link-box"
                 onclick="location.href='../../EasyMusic/html/index.html'"
               >
-                Link
-              </button>
+                <p>Link</p>
+                <div class="hover-bar"></div>
+              </div>
             </div>
           </div>
         </div>
