update my portfolio
add wave background animation in skill section

--- a/my_project/my_portfolio/html/index.html
+++ b/my_project/my_portfolio/html/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="../css/headerBack.css" />
     <link rel="stylesheet" href="../css/info.css" />
     <link rel="stylesheet" href="../css/skill.css" />
+    <link rel="stylesheet" href="../css/skillBack.css" />
     <link rel="stylesheet" href="../css/mindSetBack.css" />
     <link rel="stylesheet" href="../css/mindSet.css" />
     <link rel="stylesheet" href="../css/portfolio.css" />
@@ -190,7 +191,30 @@
       </div>
 
       <!-- skill -->
-      <section id="scrollspyHeading3" class="skill">
+      <section id="scrollspyHeading3" class="skill wave-area">
+        <ul class="waves">
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+        </ul>
+
         <div class="skill-inner">
           <h2>skill</h2>
           <div class="big-item-box">
