update my portfolio
add responsive size web

--- a/my_project/my_portfolio/html/index.html
+++ b/my_project/my_portfolio/html/index.html
@@ -137,7 +137,7 @@
         <div class="air air4"></div>
 
         <!-- header -->
-        <section id="scrollspyHeading1" class="header flex-row">
+        <section id="scrollspyHeading1" class="header">
           <div class="header-box">
             <div class="ani-block ani1"></div>
             <div class="ani-block ani2"></div>
@@ -164,7 +164,7 @@
         <!-- info -->
         <section id="scrollspyHeading2" class="info">
           <div class="inner">
-            <div class="inner-box left-top flex-row">
+            <div class="inner-box left-top">
               <div class="text-box">
                 <h2>Kim Gyeong Hyun</h2>
                 <p>e-mail : ******@naver.com</p>
@@ -182,14 +182,14 @@
             <div class="inner-box right-top">
               <div class="main-img"></div>
             </div>
-            <div class="inner-box left-bottom flex-row">
-              <div class="img-box flex-row">
+            <div class="inner-box left-bottom">
+              <div class="img-box">
                 <div class="my-img img1"></div>
                 <div class="my-img img2"></div>
                 <div class="my-img img3"></div>
               </div>
             </div>
-            <div class="inner-box right-bottom flex-row">
+            <div class="inner-box right-bottom">
               <div class="text-box">
                 <p>혼자 있는 것을 좋아하는 극 내향적인 성향입니다</p>
                 <p>
