update my portfolio
add footer img grid template /
add big deco circle in portfolio section /
other details

--- a/my_project/my_portfolio/html/index.html
+++ b/my_project/my_portfolio/html/index.html
@@ -191,7 +191,7 @@
             </div>
             <div class="inner-box right-bottom">
               <div class="text-box">
-                <p>혼자 있는 것을 좋아하는 극 내향적인 성향입니다</p>
+                <p>혼자 있는 것을 좋아하는 내향적인 성향입니다</p>
                 <p>
                   피아노를 고등학생까지 연주했고, 밴드에서 키보드를 현재까지
                   연주하고 있습니다
@@ -606,6 +606,9 @@
       <section id="scrollspyHeading5" class="port1">
         <div class="deco1"></div>
         <div class="deco2"></div>
+        <div class="big-circle">
+          <div class="sm-circle"></div>
+        </div>
         <div class="inner">
           <h2>Portfolio #1</h2>
           <div class="item-box">
@@ -638,6 +641,9 @@
       <section id="scrollspyHeading6" class="port2">
         <div class="deco1"></div>
         <div class="deco2"></div>
+        <div class="big-circle">
+          <div class="sm-circle"></div>
+        </div>
         <div class="inner">
           <h2>Portfolio #2</h2>
           <div class="item-box rev">
@@ -671,6 +677,9 @@
       <section id="scrollspyHeading7" class="port3">
         <div class="deco1"></div>
         <div class="deco2"></div>
+        <div class="big-circle">
+          <div class="sm-circle"></div>
+        </div>
         <div class="inner">
           <h2>Portfolio #3</h2>
           <div class="item-box">
@@ -706,25 +715,69 @@
         <div class="diag"></div>
         <div class="footer-inner">
           <div class="img-box">
-            <div class="item-box"></div>
-            <div class="item-box"></div>
-            <div class="item-box"></div>
-            <div class="item-box"></div>
-            <div class="item-box"></div>
-            <div class="item-box"></div>
+            <div class="sm-img-box">
+              <div
+                class="item-box"
+                data-aos="fade-up"
+                data-aos-anchor=".ani-start"
+                data-aos-delay="1200"
+              ></div>
+              <div
+                class="item-box"
+                data-aos="fade-up"
+                data-aos-anchor=".ani-start"
+                data-aos-delay="1500"
+              ></div>
+            </div>
+            <div class="sm-img-box">
+              <div
+                class="item-box"
+                data-aos="fade-up"
+                data-aos-anchor=".ani-start"
+                data-aos-delay="1300"
+              ></div>
+              <div
+                class="item-box"
+                data-aos="fade-up"
+                data-aos-anchor=".ani-start"
+                data-aos-delay="1600"
+              ></div>
+            </div>
+            <div class="sm-img-box">
+              <div
+                class="item-box"
+                data-aos="fade-up"
+                data-aos-anchor=".ani-start"
+                data-aos-delay="1400"
+              ></div>
+              <div
+                class="item-box"
+                data-aos="fade-up"
+                data-aos-anchor=".ani-start"
+                data-aos-delay="1700"
+              ></div>
+            </div>
           </div>
 
           <div class="text-box">
-            <p data-aos="fade-right">
+            <p class="ani-start" data-aos="fade-right">
               저는 모르는 것이 많습니다<br />하지만 모르는 것에 대한 호기심,
               탐구력이 높습니다<br />모르는 것을 탐구하는 것은 저의 삶에 동기
               부여가 됩니다
             </p>
-            <p data-aos="fade-right">
+            <p
+              data-aos-anchor=".ani-start"
+              data-aos-delay="300"
+              data-aos="fade-right"
+            >
               현재 html, css, js 의 웹 디자인 위주의 언어를 공부하고 있으며,<br />
               백엔드 과정도 공부하여 풀스택 개발자가 되는 것이 저의 꿈입니다
             </p>
-            <p data-aos="fade-right">
+            <p
+              data-aos-anchor=".ani-start"
+              data-aos-delay="600"
+              data-aos="fade-right"
+            >
               저의 탐구력의 장점을 밀어붙혀 프론트엔드, 백엔드를 병행하는
               과정에서 <br />어느 한 쪽이 부족하지 않도록 열심히 할 것입니다.
             </p>
