add pop up animation in skill icon

--- a/my_project/my_portfolio/html/index.html
+++ b/my_project/my_portfolio/html/index.html
@@ -225,41 +225,9 @@
         <div class="skill-inner">
           <h2>skill</h2>
           <div class="big-item-box">
-            <div class="item-box item1">
-              <div class="text-box">
-                <p>웹 기본 언어</p>
-                <p>html, css, js</p>
-              </div>
-              <div class="img-box">
-                <img src="../img/html.png" alt="icon" />
-                <img src="../img/css.png" alt="icon" />
-                <img src="../img/js.png" alt="icon" />
-              </div>
-            </div>
-
-            <div class="item-box item2">
-              <div class="text-box">
-                <p>외부 라이브러리, 프레임워크</p>
-                <p>Swiper slide, fullpage.js ...</p>
-              </div>
-
-              <div class="img-box">
-                <img src="../img/temp-swiper.png" alt="icon" />
-                <img src="../img/temp-fullpage.png" alt="icon" />
-                <img src="../img/bootstrap.png" alt="icon" />
-              </div>
-            </div>
-
-            <div class="item-box item3" style="padding: 1vw">
-              <div class="text-box" style="padding: 0">
-                <p style="margin-bottom: 1vh">그 외의 경험들</p>
-              </div>
-              <div
-                class="link-box"
-                onclick="location.href='../../kkh/html/index.html'"
-              >
-                <p>Link</p>
-                <div class="hover-bar"></div>
+            <div class="icon-box">
+              <div class="inner-color">
+                <div class="inner-text">html</div>
               </div>
             </div>
           </div>
