update my portfolio
add images

--- a/my_project/my_portfolio/html/index.html
+++ b/my_project/my_portfolio/html/index.html
@@ -734,6 +734,12 @@
                 data-aos-anchor=".ani-start"
                 data-aos-delay="1500"
               ></div>
+              <div
+                class="item-box"
+                data-aos="fade-up"
+                data-aos-anchor=".ani-start"
+                data-aos-delay="1800"
+              ></div>
             </div>
             <div class="sm-img-box">
               <div
@@ -747,6 +753,12 @@
                 data-aos="fade-up"
                 data-aos-anchor=".ani-start"
                 data-aos-delay="1600"
+              ></div>
+              <div
+                class="item-box"
+                data-aos="fade-up"
+                data-aos-anchor=".ani-start"
+                data-aos-delay="1900"
               ></div>
             </div>
             <div class="sm-img-box">
