update my portfolio
fix info responsive height error /
add responsive design in skill, footer section /
other details

--- a/my_project/my_portfolio/html/index.html
+++ b/my_project/my_portfolio/html/index.html
@@ -163,7 +163,7 @@
 
         <!-- info -->
         <section id="scrollspyHeading2" class="info">
-          <div class="inner">
+          <div class="info-inner">
             <div class="inner-box left-top">
               <div class="text-box">
                 <h2>Kim Gyeong Hyun</h2>
@@ -734,12 +734,6 @@
                 data-aos-anchor=".ani-start"
                 data-aos-delay="1500"
               ></div>
-              <div
-                class="item-box"
-                data-aos="fade-up"
-                data-aos-anchor=".ani-start"
-                data-aos-delay="1800"
-              ></div>
             </div>
             <div class="sm-img-box">
               <div
@@ -758,7 +752,7 @@
                 class="item-box"
                 data-aos="fade-up"
                 data-aos-anchor=".ani-start"
-                data-aos-delay="1900"
+                data-aos-delay="1800"
               ></div>
             </div>
             <div class="sm-img-box">
