fix responsive design in footer section

--- a/my_project/my_portfolio/html/index.html
+++ b/my_project/my_portfolio/html/index.html
@@ -755,7 +755,7 @@
                 data-aos-delay="1800"
               ></div>
             </div>
-            <div class="sm-img-box">
+            <!-- <div class="sm-img-box">
               <div
                 class="item-box"
                 data-aos="fade-up"
@@ -768,7 +768,7 @@
                 data-aos-anchor=".ani-start"
                 data-aos-delay="1700"
               ></div>
-            </div>
+            </div> -->
           </div>
 
           <div class="text-box">
