update my portfolio
update details

--- a/my_project/my_portfolio/html/index.html
+++ b/my_project/my_portfolio/html/index.html
@@ -262,7 +262,7 @@
               <div class="inner-color">
                 <div
                   class="inner-text"
-                  onclick="location.href='../../kkh/html/index.html'"
+                  onclick="window.open('../../kkh/html/index.html')"
                 >
                   <div>Link</div>
                 </div>
@@ -620,7 +620,7 @@
           <div class="item-box">
             <video
               class="video1"
-              onclick="location.href='../../anywhere/html/index.html'"
+              onclick="window.open('../../anywhere/html/index.html')"
               loop
               muted
             >
@@ -633,7 +633,7 @@
               <p>반응형 웹 디자인</p>
               <div
                 class="link-box"
-                onclick="location.href='../../anywhere/html/index.html'"
+                onclick="window.open('../../anywhere/html/index.html')"
               >
                 <p>Link</p>
                 <div class="hover-bar"></div>
@@ -655,7 +655,7 @@
           <div class="item-box rev">
             <video
               class="video2"
-              onclick="location.href='../../Dr_K/html/index.html'"
+              onclick="window.open('../../Dr_K/html/index.html')"
               loop
               muted
             >
@@ -669,7 +669,7 @@
               <p>반응형 웹 디자인</p>
               <div
                 class="link-box"
-                onclick="location.href='../../Dr_K/html/index.html'"
+                onclick="window.open('../../Dr_K/html/index.html')"
               >
                 <p>Link</p>
                 <div class="hover-bar"></div>
@@ -691,7 +691,7 @@
           <div class="item-box">
             <video
               class="video3"
-              onclick="location.href='../../EasyMusic/html/index.html'"
+              onclick="window.open('../../EasyMusic/html/index.html')"
               loop
               muted
             >
@@ -705,7 +705,7 @@
               <p>반응형 웹 디자인</p>
               <div
                 class="link-box"
-                onclick="location.href='../../EasyMusic/html/index.html'"
+                onclick="window.open('../../EasyMusic/html/index.html')"
               >
                 <p>Link</p>
                 <div class="hover-bar"></div>
