update my portfolio
add custom AOS in footer section

--- a/my_project/my_portfolio/html/index.html
+++ b/my_project/my_portfolio/html/index.html
@@ -24,8 +24,6 @@
       referrerpolicy="no-referrer"
     />
 
-    <!-- AOS link -->
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
     <!-- bootstrap link -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css"
@@ -717,74 +715,27 @@
         <div class="footer-inner">
           <div class="img-box">
             <div class="sm-img-box">
-              <div
-                class="item-box"
-                data-aos="fade-up"
-                data-aos-anchor=".ani-start"
-                data-aos-delay="1200"
-              ></div>
-              <div
-                class="item-box"
-                data-aos="fade-up"
-                data-aos-anchor=".ani-start"
-                data-aos-delay="1500"
-              ></div>
+              <div class="item-box ani4-1"></div>
+              <div class="item-box ani5-1"></div>
             </div>
             <div class="sm-img-box">
-              <div
-                class="item-box"
-                data-aos="fade-up"
-                data-aos-anchor=".ani-start"
-                data-aos-delay="1300"
-              ></div>
-              <div
-                class="item-box"
-                data-aos="fade-up"
-                data-aos-anchor=".ani-start"
-                data-aos-delay="1600"
-              ></div>
-              <div
-                class="item-box"
-                data-aos="fade-up"
-                data-aos-anchor=".ani-start"
-                data-aos-delay="1800"
-              ></div>
+              <div class="item-box ani4-2"></div>
+              <div class="item-box ani5-2"></div>
+              <div class="item-box ani5-3"></div>
             </div>
-            <!-- <div class="sm-img-box">
-              <div
-                class="item-box"
-                data-aos="fade-up"
-                data-aos-anchor=".ani-start"
-                data-aos-delay="1400"
-              ></div>
-              <div
-                class="item-box"
-                data-aos="fade-up"
-                data-aos-anchor=".ani-start"
-                data-aos-delay="1700"
-              ></div>
-            </div> -->
           </div>
 
           <div class="text-box">
-            <p class="ani-start" data-aos="fade-right">
+            <p class="ani-start">
               저는 모르는 것이 많습니다<br />하지만 모르는 것에 대한 호기심,
               탐구력이 높습니다<br />모르는 것을 탐구하는 것은 저의 삶에 동기
               부여가 됩니다
             </p>
-            <p
-              data-aos-anchor=".ani-start"
-              data-aos-delay="300"
-              data-aos="fade-right"
-            >
+            <p class="ani2">
               현재 html, css, js 의 웹 디자인 위주의 언어를 공부하고 있으며,<br />
               백엔드 과정도 공부하여 풀스택 개발자가 되는 것이 저의 꿈입니다
             </p>
-            <p
-              data-aos-anchor=".ani-start"
-              data-aos-delay="600"
-              data-aos="fade-right"
-            >
+            <p class="ani3">
               저의 탐구력의 장점을 밀어붙혀 프론트엔드, 백엔드를 병행하는
               과정에서
               <br />어느 한 쪽이 부족하지 않도록 열심히 할 것입니다.
@@ -802,12 +753,9 @@
           ></i>
           <p>top</p>
         </div>
+
+        <script src="../js/footerAOS.js"></script>
       </section>
     </div>
-
-    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-    <script>
-      AOS.init();
-    </script>
   </body>
 </html>
