fix my portfolio
track window height without toolbar in mobile web and set to section height /
this is test commit

--- a/my_project/my_portfolio/html/index.html
+++ b/my_project/my_portfolio/html/index.html
@@ -776,6 +776,9 @@
 
         <!-- custom footer AOS js -->
         <script src="../js/footerAOS.js"></script>
+
+        <!-- adjust section height without toolbar when window is resized -->
+        <script src="../js/responsiveHeight.js"></script>
       </section>
     </div>
   </body>
